# libedited

./: .gitignore  COPYING  Makefile.am  Makefile.in  README.md  config.h  config.h.in  configure  configure.ac  libedited.pc  libedited.pc.in
doc/: Makefile.in  mdoc2man.awk
examples/: Makefile.am  Makefile.in  fileman.c  sample.c  tc1.c  wtc1.c
src/: Makefile.am  Makefile.in  chared.c  chartype.c  common.c  el.c  eln.c  emacs.c  emacs.h  filecomplete.c  help.h  hist.c  histedit.h  history.c  keymacro.c  literal.c  makelist  map.c  parse.c  prompt.c  read.c  readline.c  refresh.c  search.c  sig.c  strlcpy.c  style.c  terminal.c  tokenizer.c  tty.c  unvis.c  vi.c  vis.c
src/edited/: chared.h  chartype.h  common.h  edited.h  el.h  emacs.h  fcns.h  filecomplete.h  func.h  help.h  hist.h  keymacro.h  literal.h  map.h  parse.h  prompt.h  read.h  readline.h  refresh.h  search.h  sig.h  style.h  sys.h  terminal.h  tty.h  vi.h  vis.h
src/editline/: readline.h:Zone.Identifier
